--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask==3.0.0
-flask-cors==4.0.0
-requests==2.31.0
-psutil==5.9.7
-torch==2.1.2
+Flask>=2.0.1
+Flask-CORS>=3.0.10
+requests>=2.26.0
+psutil>=5.8.0
+configparser>=5.0.2
+# vllm需要单独安装，请参考README.md中的说明
